@@ -1,3 +1,8 @@
+Thu Mar 18 22:01:39 GMT 2004 (njh)
+----------------------------------
+  * libclamav:	If a message only contains a single RFC822 message that has no
+	encoding don't save for scanning
+
 Thu Mar 18 14:16:19 GMT 2004 (njh)
 ----------------------------------
   * libclamav/message.c:	Added bounce and handle text/plain encoded
